--- a/style.css
+++ b/style.css
@@ -1,3 +1,64 @@
+.content{
+    padding: 150px 150px 0px 0px;
+}
+
+.content h1{
+    color: #ffffff;
+    font-size: 55px;
+    text-transform: uppercase;
+    font-weight: 500;
+    line-height: 55px;
+}
+
+.content p{
+    margin-top: 25px;
+    color:#aab1ff;
+    text-transform: uppercase;
+    font-size: 35px;
+    line-height: 40px;
+}
+
+.btn-1{
+    display: inline-block;
+    background-color: rgba(170,177,255, 0.3);
+    border:1px solid #aab1ff;
+    margin: 35px 10px 0px 0px;
+    padding:15px 25px;
+    color: #ffffff;
+    border-radius: 25px;
+}
+
+.btn-1:hover{
+    background-color:#aab1ff;
+}
+
+.services{
+    padding:10px;
+    display:flex;
+    justify-content:space-between;
+    text-align: center;
+}
+
+.service{
+    padding: 25px;
+    margin: 0px 10px;
+    box-shadow: 0px 0px 20px rgb(135,141,214,0.3);
+}
+.service.img{
+    margin-top: -50px;
+}
+
+.service h3{
+    font-size: 20 px;
+    color: #0e0e0e;
+    margin-bottom: 10px;
+}
+
+.service p{
+    color: #525254;
+    font-size: 16px;
+}
+
 .portafolio{
     padding: 80px 0px;
     text-align: center;
