--- a/style.css
+++ b/style.css
@@ -78,35 +78,6 @@ header{
     display: flex;
 }
 
-footer {
-    padding: 0px 30px 30px 30px;
-}
-
-.info-content {
-    flex-direction: column;
-    text-aling: center;
-}
-
-.info-price {
-    margin: 0px 0px 20px 0px;
-}
-
-.info-txt {
-    margin: 0px;
-}
-
-hr {
-    margin: 25 0px;
-}
-
-.enlaces {
-    flex-direction: column;
-    align-items: center;
-}
-
-.enlace {
-    flex-direction: column;
-}
 .content{
     padding: 150px 150px 0px 0px;
 }
@@ -168,7 +139,7 @@ hr {
     font-size: 16px;
 }
 
-.portafolio{
+.portafolios{
     padding: 80px 0px;
     text-align: center;
     color: #0e0e0e;
@@ -201,4 +172,34 @@ hr {
     font-size: 18px;
     color: #525254;
     margin-bottom: 25px;
+}
+
+footer {
+    padding: 0px 30px 30px 30px;
+}
+
+.info-content {
+    flex-direction: column;
+    text-align: center;
+}
+
+.info-price {
+    margin: 0px 0px 20px 0px;
+}
+
+.info-txt {
+    margin: 0px;
+}
+
+hr {
+    margin: 25 0px;
+}
+
+.enlaces {
+    flex-direction: column;
+    align-items: center;
+}
+
+.enlace {
+    flex-direction: column;
 }
